# cmake_dependency_test

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: foo_bar.cpp  foo_bar.h  main.cpp
interface_lib_xa/: CMakeLists.txt
interface_lib_ya/: CMakeLists.txt
lib_xa/: CMakeLists.txt
lib_ya/: CMakeLists.txt
static_lib_a/: CMakeLists.txt
static_lib_a/include/: static_lib_a.h
static_lib_a/src/: static_lib_a.cpp
static_lib_b/: CMakeLists.txt
static_lib_b/include/: static_lib_b.h
static_lib_b/src/: static_lib_b.cpp
static_lib_c/: CMakeLists.txt
static_lib_c/include/: static_lib_c.h
static_lib_c/src/: static_lib_c.cpp
static_lib_x/: CMakeLists.txt
static_lib_x/include/: static_lib_x.h
static_lib_x/src/: static_lib_x.cpp
static_lib_y/: CMakeLists.txt
static_lib_y/include/: static_lib_y.h
static_lib_y/src/: static_lib_y.cpp
